@@ -1,5 +1,6 @@
 package io.breland.bbagent.server.website;
 
+import io.breland.bbagent.generated.model.WebsiteAccountIdentity;
 import io.breland.bbagent.generated.model.WebsiteAccountLink;
 import io.breland.bbagent.generated.model.WebsiteAccountProfile;
 import io.breland.bbagent.generated.model.WebsiteAccountRedeemLinkResponse;
@@ -7,17 +8,17 @@ import io.breland.bbagent.generated.model.WebsiteAccountResponse;
 import io.breland.bbagent.generated.model.WebsiteCalendarAccountSummary;
 import io.breland.bbagent.generated.model.WebsiteIntegrationSummary;
 import io.breland.bbagent.generated.model.WebsiteLinkedAccountsResponse;
+import io.breland.bbagent.generated.model.WebsiteLinkedIntegrationAccount;
 import io.breland.bbagent.generated.model.WebsiteModelAccessSummary;
-import io.breland.bbagent.server.agent.AgentAccountIdentity;
+import io.breland.bbagent.server.agent.AgentAccountResolver;
 import io.breland.bbagent.server.agent.IncomingMessage;
 import io.breland.bbagent.server.agent.model_picker.ModelAccessService;
-import io.breland.bbagent.server.agent.persistence.website.WebsiteAccountEntity;
+import io.breland.bbagent.server.agent.persistence.account.AgentAccountEntity;
+import io.breland.bbagent.server.agent.persistence.account.AgentAccountIdentityEntity;
 import io.breland.bbagent.server.agent.persistence.website.WebsiteAccountLinkTokenEntity;
 import io.breland.bbagent.server.agent.persistence.website.WebsiteAccountLinkTokenRepository;
-import io.breland.bbagent.server.agent.persistence.website.WebsiteAccountRepository;
-import io.breland.bbagent.server.agent.persistence.website.WebsiteAccountSenderLinkEntity;
-import io.breland.bbagent.server.agent.persistence.website.WebsiteAccountSenderLinkRepository;
 import io.breland.bbagent.server.agent.tools.coder.CoderMcpClient;
+import io.breland.bbagent.server.agent.tools.gcal.AccountKeyParts;
 import io.breland.bbagent.server.agent.tools.gcal.GcalClient;
 import java.net.URI;
 import java.nio.charset.StandardCharsets;
@@ -33,9 +34,11 @@ import java.util.HexFormat;
 import java.util.List;
 import java.util.Locale;
 import java.util.Optional;
-import java.util.UUID;
+import java.util.stream.Stream;
+import org.apache.commons.lang3.StringUtils;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.http.HttpStatus;
+import org.springframework.lang.Nullable;
 import org.springframework.security.oauth2.jwt.Jwt;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -48,9 +51,8 @@ public class WebsiteAccountService {
   private static final int LINK_TOKEN_BYTES = 32;
   private static final String TOKEN_HASH_ALGORITHM = "SHA-256";
 
-  private final WebsiteAccountRepository accountRepository;
+  private final AgentAccountResolver accountResolver;
   private final WebsiteAccountLinkTokenRepository tokenRepository;
-  private final WebsiteAccountSenderLinkRepository linkRepository;
   private final GcalClient gcalClient;
   private final CoderMcpClient coderMcpClient;
   private final ModelAccessService modelAccessService;
@@ -59,17 +61,15 @@ public class WebsiteAccountService {
   private final SecureRandom secureRandom = new SecureRandom();
 
   public WebsiteAccountService(
-      WebsiteAccountRepository accountRepository,
+      AgentAccountResolver accountResolver,
       WebsiteAccountLinkTokenRepository tokenRepository,
-      WebsiteAccountSenderLinkRepository linkRepository,
       GcalClient gcalClient,
-      CoderMcpClient coderMcpClient,
+      @Nullable CoderMcpClient coderMcpClient,
       ModelAccessService modelAccessService,
       @Value("${website.base-url:" + DEFAULT_WEBSITE_BASE_URL + "}") String websiteBaseUrl,
       @Value("${website.account-link-token-ttl-minutes:30}") long linkTokenTtlMinutes) {
-    this.accountRepository = accountRepository;
+    this.accountResolver = accountResolver;
     this.tokenRepository = tokenRepository;
-    this.linkRepository = linkRepository;
     this.gcalClient = gcalClient;
     this.coderMcpClient = coderMcpClient;
     this.modelAccessService = modelAccessService;
@@ -79,29 +79,16 @@ public class WebsiteAccountService {
 
   @Transactional
   public WebsiteAccountResponse getAccount(Jwt jwt) {
-    WebsiteAccountEntity account = upsertAccount(jwt);
-    return new WebsiteAccountResponse()
-        .account(toProfile(account))
-        .links(
-            linkRepository
-                .findAllByAccountSubjectOrderByCreatedAtDesc(account.getKeycloakSubject())
-                .stream()
-                .map(this::toLink)
-                .toList());
+    AgentAccountEntity account = accountResolver.upsertWebsiteAccount(jwt);
+    return new WebsiteAccountResponse().account(toProfile(account)).links(List.of(toLink(account)));
   }
 
   @Transactional
   public WebsiteLinkedAccountsResponse listLinkedAccounts(Jwt jwt) {
-    WebsiteAccountEntity account = upsertAccount(jwt);
-    List<WebsiteIntegrationSummary> integrations =
-        linkRepository
-            .findAllByAccountSubjectOrderByCreatedAtDesc(account.getKeycloakSubject())
-            .stream()
-            .map(this::toIntegration)
-            .toList();
+    AgentAccountEntity account = accountResolver.upsertWebsiteAccount(jwt);
     return new WebsiteLinkedAccountsResponse()
         .account(toProfile(account))
-        .integrations(integrations);
+        .integrations(List.of(toIntegration(account)));
   }
 
   @Transactional
@@ -109,21 +96,19 @@ public class WebsiteAccountService {
     if (message == null) {
       throw new IllegalArgumentException("missing message context");
     }
-    AgentAccountIdentity identity = AgentAccountIdentity.from(message);
-    if (identity.accountBase().isBlank()) {
-      throw new IllegalArgumentException("missing iMessage identity");
-    }
-
+    AgentAccountEntity account =
+        accountResolver
+            .resolveOrCreate(message)
+            .map(AgentAccountResolver.ResolvedAccount::account)
+            .orElseThrow(() -> new IllegalArgumentException("missing message identity"));
     String token = newToken();
     String tokenHash = hashToken(token);
     Instant now = Instant.now();
     Instant expiresAt = now.plus(linkTokenTtl);
-    WebsiteAccountLinkTokenEntity entity =
+    tokenRepository.save(
         new WebsiteAccountLinkTokenEntity(
             tokenHash,
-            identity.accountBase(),
-            identity.coderAccountBase(),
-            identity.gcalAccountBase(),
+            account.getAccountId(),
             message.chatGuid(),
             message.sender(),
             message.service(),
@@ -131,10 +116,8 @@ public class WebsiteAccountService {
             message.messageGuid(),
             expiresAt,
             now,
-            now);
-    tokenRepository.save(entity);
-    String url = buildLinkUrl(token);
-    return new CreatedLinkToken(url, expiresAt, identity.accountBase());
+            now));
+    return new CreatedLinkToken(buildLinkUrl(token), expiresAt, account.getAccountId());
   }
 
   @Transactional(readOnly = true)
@@ -142,173 +125,187 @@ public class WebsiteAccountService {
     if (message == null) {
       return SenderLinkStatus.empty();
     }
-    return getLinkStatus(message.sender(), message.chatGuid());
+    return accountResolver
+        .resolve(message)
+        .map(resolved -> toStatus(resolved.account()))
+        .orElseGet(SenderLinkStatus::empty);
+  }
+
+  @Transactional
+  public SenderLinkStatus getLinkStatus(String sender, String chatGuid) {
+    return getLinkStatus(IncomingMessage.TRANSPORT_BLUEBUBBLES, sender, chatGuid);
+  }
+
+  @Transactional
+  public SenderLinkStatus getLinkStatus(String transport, String sender, String chatGuid) {
+    String identifier = linkStatusIdentifier(transport, sender, chatGuid);
+    if (StringUtils.isBlank(identifier)) {
+      return SenderLinkStatus.empty();
+    }
+    return accountResolver
+        .resolveOrCreate(transport, identifier)
+        .map(resolved -> toStatus(resolved.account()))
+        .orElseGet(SenderLinkStatus::empty);
   }
 
   @Transactional(readOnly = true)
-  public SenderLinkStatus getLinkStatus(String sender, String chatGuid) {
-    AgentAccountIdentity identity = AgentAccountIdentity.from(sender, chatGuid);
-    if (identity.accountBase().isBlank()) {
-      return SenderLinkStatus.empty();
+  public Optional<String> findLinkedAccountEmail(IncomingMessage message) {
+    if (message == null) {
+      return Optional.empty();
     }
-    List<WebsiteAccountSenderLinkEntity> accountLinks =
-        linkRepository.findAllByAccountBaseOrderByCreatedAtDesc(identity.accountBase());
-    List<WebsiteAccountSenderLinkEntity> exactLinks =
-        linkRepository
-            .findAllByAccountBaseAndCoderAccountBaseAndGcalAccountBaseOrderByCreatedAtDesc(
-                identity.accountBase(), identity.coderAccountBase(), identity.gcalAccountBase());
-    Instant latestLinkedAt =
-        exactLinks.stream()
-            .findFirst()
-            .or(() -> accountLinks.stream().findFirst())
-            .map(WebsiteAccountSenderLinkEntity::getCreatedAt)
-            .orElse(null);
-    return new SenderLinkStatus(
-        identity.accountBase(),
-        identity.coderAccountBase(),
-        identity.gcalAccountBase(),
-        !accountLinks.isEmpty(),
-        !exactLinks.isEmpty(),
-        accountLinks.size(),
-        exactLinks.size(),
-        modelAccessService.toWebsiteSummary(identity.accountBase()),
-        latestLinkedAt);
+    return accountResolver
+        .resolve(message)
+        .map(AgentAccountResolver.ResolvedAccount::account)
+        .map(AgentAccountEntity::getWebsiteEmail)
+        .map(String::trim)
+        .filter(StringUtils::isNotBlank);
   }
 
   @Transactional
   public WebsiteAccountRedeemLinkResponse redeemLink(Jwt jwt, String token) {
-    if (token == null || token.isBlank()) {
+    if (StringUtils.isBlank(token)) {
       throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "Missing link token");
     }
-    WebsiteAccountEntity account = upsertAccount(jwt);
-    String tokenHash = hashToken(token);
+    AgentAccountEntity websiteAccount = accountResolver.upsertWebsiteAccount(jwt);
     WebsiteAccountLinkTokenEntity tokenEntity =
         tokenRepository
-            .findById(tokenHash)
+            .findById(hashToken(token))
             .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Link not found"));
     Instant now = Instant.now();
-    validateToken(tokenEntity, account, now);
+    validateToken(tokenEntity, websiteAccount, now);
+    boolean alreadyLinked = tokenEntity.getRedeemedAt() != null;
+    AgentAccountEntity linkedAccount =
+        accountResolver.linkWebsiteAccount(tokenEntity.getAccountId(), jwt);
+    markTokenRedeemed(tokenEntity, linkedAccount, now);
 
-    boolean tokenAlreadyRedeemed = tokenEntity.getRedeemedAccountSubject() != null;
-    Optional<WebsiteAccountSenderLinkEntity> existingLink =
-        linkRepository.findByAccountSubjectAndCoderAccountBaseAndGcalAccountBase(
-            account.getKeycloakSubject(),
-            tokenEntity.getCoderAccountBase(),
-            tokenEntity.getGcalAccountBase());
-    if (tokenAlreadyRedeemed && existingLink.isEmpty()) {
-      throw new ResponseStatusException(HttpStatus.CONFLICT, "Link token already consumed");
-    }
-    boolean alreadyLinked = existingLink.isPresent();
-    WebsiteAccountSenderLinkEntity link =
-        existingLink.orElseGet(() -> newSenderLink(account, tokenEntity, now));
-    link.setUpdatedAt(now);
-    link = linkRepository.save(link);
-
-    markTokenRedeemed(tokenEntity, account, now);
-
-    WebsiteAccountRedeemLinkResponse response = new WebsiteAccountRedeemLinkResponse();
-    response.setStatus(alreadyLinked ? "already_linked" : "linked");
-    response.setLink(toLink(link));
-    return response;
+    return new WebsiteAccountRedeemLinkResponse()
+        .status(alreadyLinked ? "already_linked" : "linked")
+        .link(toLink(linkedAccount));
   }
 
   @Transactional
-  public boolean deleteLink(Jwt jwt, String linkId) {
-    WebsiteAccountEntity account = upsertAccount(jwt);
-    WebsiteAccountSenderLinkEntity link =
-        linkRepository
-            .findByLinkIdAndAccountSubject(linkId, account.getKeycloakSubject())
-            .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Link not found"));
-    linkRepository.delete(link);
+  public boolean deleteLinkedAccount(Jwt jwt, String type, String accountKey) {
+    AgentAccountEntity account = accountResolver.upsertWebsiteAccount(jwt);
+    if (StringUtils.isBlank(type) || StringUtils.isBlank(accountKey)) {
+      throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "Missing linked account");
+    }
+    boolean deleted =
+        switch (type.toLowerCase(Locale.ROOT)) {
+          case "gcal" ->
+              account.getAccountId().equals(AccountKeyParts.parse(accountKey).accountId())
+                  && gcalClient.revokeAccount(accountKey);
+          case "coder" ->
+              account.getAccountId().equals(accountKey)
+                  && coderMcpClient != null
+                  && coderMcpClient.revoke(account.getAccountId());
+          default -> throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "Unknown type");
+        };
+    if (!deleted) {
+      throw new ResponseStatusException(
+          HttpStatus.NOT_FOUND, "Linked integration account not found");
+    }
     return true;
   }
 
-  private WebsiteAccountEntity upsertAccount(Jwt jwt) {
-    if (jwt == null || jwt.getSubject() == null || jwt.getSubject().isBlank()) {
-      throw new ResponseStatusException(HttpStatus.UNAUTHORIZED, "Missing account subject");
+  private String linkStatusIdentifier(String transport, String sender, String chatGuid) {
+    if (StringUtils.isNotBlank(sender)) {
+      return sender;
     }
-    Instant now = Instant.now();
-    WebsiteAccountEntity account =
-        accountRepository
-            .findById(jwt.getSubject())
-            .orElseGet(
-                () -> new WebsiteAccountEntity(jwt.getSubject(), null, null, null, now, now));
-    account.setEmail(jwt.getClaimAsString("email"));
-    account.setPreferredUsername(jwt.getClaimAsString("preferred_username"));
-    account.setDisplayName(resolveDisplayName(jwt));
-    account.setUpdatedAt(now);
-    return accountRepository.save(account);
+    if (IncomingMessage.TRANSPORT_LXMF.equalsIgnoreCase(transport)) {
+      return IncomingMessage.stripTransportPrefix(chatGuid);
+    }
+    return sender;
   }
 
-  private WebsiteAccountSenderLinkEntity newSenderLink(
-      WebsiteAccountEntity account, WebsiteAccountLinkTokenEntity token, Instant now) {
-    return new WebsiteAccountSenderLinkEntity(
-        UUID.randomUUID().toString(),
-        account.getKeycloakSubject(),
-        token.getAccountBase(),
-        token.getCoderAccountBase(),
-        token.getGcalAccountBase(),
-        token.getChatGuid(),
-        token.getSender(),
-        token.getService(),
-        token.isGroup(),
-        token.getSourceMessageGuid(),
-        token.getTokenHash(),
-        now,
-        now);
+  private SenderLinkStatus toStatus(AgentAccountEntity account) {
+    boolean linked = StringUtils.isNotBlank(account.getWebsiteSubject());
+    return new SenderLinkStatus(
+        account.getAccountId(),
+        linked,
+        linked,
+        1,
+        linked ? 1 : 0,
+        modelAccessService.toWebsiteSummary(account.getAccountId()),
+        linked ? account.getUpdatedAt() : null);
   }
 
-  private WebsiteIntegrationSummary toIntegration(WebsiteAccountSenderLinkEntity link) {
+  private WebsiteIntegrationSummary toIntegration(AgentAccountEntity account) {
     List<WebsiteCalendarAccountSummary> gcalAccounts =
-        gcalClient.listAccountsFor(link.getGcalAccountBase()).stream()
-            .map(accountId -> new WebsiteCalendarAccountSummary().accountId(accountId))
+        gcalClient.listLinkedAccountsFor(account.getAccountId()).stream()
+            .map(
+                linked ->
+                    new WebsiteCalendarAccountSummary()
+                        .accountId(linked.googleAccountId())
+                        .accountKey(linked.accountKey())
+                        .email(linked.googleAccountId()))
             .toList();
     return new WebsiteIntegrationSummary()
-        .link(toLink(link))
-        .coderLinked(coderMcpClient != null && coderMcpClient.isLinked(link.getCoderAccountBase()))
+        .link(toLink(account))
+        .coderLinked(coderMcpClient != null && coderMcpClient.isLinked(account.getAccountId()))
         .gcalAccounts(gcalAccounts)
-        .modelAccess(modelAccessService.toWebsiteSummary(link.getAccountBase()));
+        .linkedAccounts(linkedAccounts(account))
+        .modelAccess(modelAccessService.toWebsiteSummary(account.getAccountId()));
   }
 
-  private WebsiteAccountProfile toProfile(WebsiteAccountEntity account) {
+  private List<WebsiteLinkedIntegrationAccount> linkedAccounts(AgentAccountEntity account) {
+    Stream<WebsiteLinkedIntegrationAccount> gcalAccounts =
+        gcalClient.listLinkedAccountsFor(account.getAccountId()).stream()
+            .map(
+                linked ->
+                    new WebsiteLinkedIntegrationAccount()
+                        .type(WebsiteLinkedIntegrationAccount.TypeEnum.GCAL)
+                        .accountKey(linked.accountKey())
+                        .email(linked.googleAccountId())
+                        .label("Google Calendar")
+                        .unlinkable(true));
+    Stream<WebsiteLinkedIntegrationAccount> coderAccounts =
+        coderMcpClient == null
+            ? Stream.empty()
+            : coderMcpClient
+                .findLinkedAccount(account.getAccountId())
+                .map(
+                    linked ->
+                        new WebsiteLinkedIntegrationAccount()
+                            .type(WebsiteLinkedIntegrationAccount.TypeEnum.CODER)
+                            .accountKey(linked.accountId())
+                            .email(linked.email())
+                            .label(StringUtils.defaultIfBlank(linked.label(), "Coder"))
+                            .unlinkable(true))
+                .stream();
+    return Stream.concat(gcalAccounts, coderAccounts).toList();
+  }
+
+  private WebsiteAccountProfile toProfile(AgentAccountEntity account) {
     return new WebsiteAccountProfile()
-        .subject(account.getKeycloakSubject())
-        .email(account.getEmail())
-        .preferredUsername(account.getPreferredUsername())
-        .displayName(account.getDisplayName())
+        .subject(account.getWebsiteSubject())
+        .accountId(account.getAccountId())
+        .email(account.getWebsiteEmail())
+        .preferredUsername(account.getWebsitePreferredUsername())
+        .displayName(account.getWebsiteDisplayName())
         .createdAt(offset(account.getCreatedAt()))
         .updatedAt(offset(account.getUpdatedAt()));
   }
 
-  private WebsiteAccountLink toLink(WebsiteAccountSenderLinkEntity link) {
+  private WebsiteAccountLink toLink(AgentAccountEntity account) {
     return new WebsiteAccountLink()
-        .linkId(link.getLinkId())
-        .accountBase(link.getAccountBase())
-        .coderAccountBase(link.getCoderAccountBase())
-        .gcalAccountBase(link.getGcalAccountBase())
-        .chatGuid(link.getChatGuid())
-        .sender(link.getSender())
-        .service(link.getService())
-        .isGroup(link.isGroup())
-        .createdAt(offset(link.getCreatedAt()));
+        .linkId(account.getAccountId())
+        .accountId(account.getAccountId())
+        .identities(
+            accountResolver.identitiesForAccount(account.getAccountId()).stream()
+                .map(this::toIdentity)
+                .toList())
+        .createdAt(offset(account.getCreatedAt()));
+  }
+
+  private WebsiteAccountIdentity toIdentity(AgentAccountIdentityEntity identity) {
+    return new WebsiteAccountIdentity()
+        .type(WebsiteAccountIdentity.TypeEnum.fromValue(identity.getIdentityType()))
+        .identifier(identity.getIdentifier())
+        .normalizedIdentifier(identity.getNormalizedIdentifier());
   }
 
   private OffsetDateTime offset(Instant instant) {
     return instant == null ? null : OffsetDateTime.ofInstant(instant, ZoneOffset.UTC);
-  }
-
-  private String resolveDisplayName(Jwt jwt) {
-    String name = jwt.getClaimAsString("name");
-    if (name != null && !name.isBlank()) {
-      return name;
-    }
-    String given = jwt.getClaimAsString("given_name");
-    String family = jwt.getClaimAsString("family_name");
-    String joined = ((given == null ? "" : given) + " " + (family == null ? "" : family)).trim();
-    if (!joined.isBlank()) {
-      return joined;
-    }
-    return jwt.getClaimAsString("preferred_username");
   }
 
   private String newToken() {
@@ -336,22 +333,22 @@ public class WebsiteAccountService {
   }
 
   private void validateToken(
-      WebsiteAccountLinkTokenEntity tokenEntity, WebsiteAccountEntity account, Instant now) {
+      WebsiteAccountLinkTokenEntity tokenEntity, AgentAccountEntity account, Instant now) {
     if (tokenEntity.getExpiresAt().isBefore(now)) {
       throw new ResponseStatusException(HttpStatus.GONE, "Link expired");
     }
-    if (tokenEntity.getRedeemedAccountSubject() != null
-        && !tokenEntity.getRedeemedAccountSubject().equals(account.getKeycloakSubject())) {
+    if (tokenEntity.getRedeemedAccountId() != null
+        && !tokenEntity.getRedeemedAccountId().equals(account.getAccountId())) {
       throw new ResponseStatusException(
           HttpStatus.CONFLICT, "Link already redeemed by another account");
     }
   }
 
   private void markTokenRedeemed(
-      WebsiteAccountLinkTokenEntity tokenEntity, WebsiteAccountEntity account, Instant now) {
+      WebsiteAccountLinkTokenEntity tokenEntity, AgentAccountEntity account, Instant now) {
     tokenEntity.setRedeemedAt(
         tokenEntity.getRedeemedAt() == null ? now : tokenEntity.getRedeemedAt());
-    tokenEntity.setRedeemedAccountSubject(account.getKeycloakSubject());
+    tokenEntity.setRedeemedAccountId(account.getAccountId());
     tokenEntity.setUpdatedAt(now);
     tokenRepository.save(tokenEntity);
   }
@@ -365,12 +362,10 @@ public class WebsiteAccountService {
     return base;
   }
 
-  public record CreatedLinkToken(String url, Instant expiresAt, String accountBase) {}
+  public record CreatedLinkToken(String url, Instant expiresAt, String accountId) {}
 
   public record SenderLinkStatus(
-      String accountBase,
-      String coderAccountBase,
-      String gcalAccountBase,
+      String accountId,
       boolean linked,
       boolean exactChatLinked,
       int linkCount,
@@ -378,7 +373,7 @@ public class WebsiteAccountService {
       WebsiteModelAccessSummary modelAccess,
       Instant linkedAt) {
     public static SenderLinkStatus empty() {
-      return new SenderLinkStatus(null, null, null, false, false, 0, 0, null, null);
+      return new SenderLinkStatus(null, false, false, 0, 0, null, null);
     }
   }
 }
